Repeat background as temporary fix to hide whitespace above header on smaller screens

--- a/src/scss/partials/base.scss
+++ b/src/scss/partials/base.scss
@@ -13,7 +13,7 @@ header {
 }
 
 body {
-    background: url(https://static.useresponse.com/public/bunq/my-interface/bunq-colours-bar-2.png) no-repeat;
+    background: url(https://static.useresponse.com/public/bunq/my-interface/bunq-colours-bar-2.png) repeat;
     height: calc(100vh - 50px);
     background-size: 100%;
     width: 100%;
